apps/sealed-secrets-ui/base/sealed-secrets-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: sealed-secrets-route
  namespace: sealed-secrets
spec:
  hostnames:
  - sealed-secrets.lokal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: sealed-secrets-server
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
