apps/sealed-secrets-ui/base/sealed-secrets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sealed-secrets-ingress
  namespace: sealed-secrets
spec:
  rules:
  - host: sealed-secrets.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sealed-secrets-ui-ip
            port:
              name: http
